// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`badge [snapshot] > size: lg 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-warning"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > size: md 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-warning"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > size: sm 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-warning"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: accent 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-accent"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: accent, subtle 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-accent-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: contrast 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-contrast"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: contrast, subtle 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-contrast-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: danger 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-danger"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: danger, subtle 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-danger-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: info 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-info"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: info, subtle 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-info-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: mint 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-mint"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: mint, subtle 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-mint-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: pink 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-pink"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: pink, subtle 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-pink-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: purple 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-purple"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: purple, subtle 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-purple-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: success 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-success"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: success, subtle 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-success-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: warning 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-warning"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > variant: warning, subtle 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-warning-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;
